# beehive

./: .gitignore  Cargo.toml  LICENSE  index.html  some-grids.txt  styles.css
.github/: ci.yaml
.github/workflows/: ci.yaml
assets/: beehives.json
dictionaries/all_languages/: 100_letters_words  13_letters_words  14_letters_words  15_letters_words  16_letters_words  179_letters_words  17_letters_words  182_letters_words  18_letters_words  19_letters_words  20_letters_words  21_letters_words  22_letters_words  23_letters_words  24_letters_words  25_letters_words  26_letters_words  27_letters_words  28_letters_words  29_letters_words  2_letters_words  30_letters_words  31_letters_words  32_letters_words  33_letters_words  34_letters_words  35_letters_words  36_letters_words  37_letters_words  3_letters_words  40_letters_words  44_letters_words  45_letters_words  4_letters_words  51_letters_words  52_letters_words  54_letters_words  5_letters_words  66_letters_words  6_letters_words  (+3 more)
dictionaries/english/: 100_letters_words  10_letters_words  11_letters_words  12_letters_words  13_letters_words  14_letters_words  15_letters_words  16_letters_words  17_letters_words  18_letters_words  19_letters_words  20_letters_words  21_letters_words  22_letters_words  23_letters_words  24_letters_words  25_letters_words  26_letters_words  (+33 more)
samples/: 100k-first-lines  300-first-lines  Frequency List.numbers  README.txt  frequencylist.azw3  frequencylist.epub  test.xml
src/: beehive.rs  beehive_serde.rs  beehive_swap.rs  dictionary.rs  grid.rs  grid_beehive.rs  main.rs  waffle.rs
(+25 files in other folders)
